<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    android:padding="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/set_as_ringtone"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/set_as_ringtone_dec"
        android:textColor="#000000"
        android:textSize="@dimen/_11sdp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDialogCancel"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/_15sdp"
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="@dimen/_11sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDialogSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="?attr/selectableItemBackground"

            android:gravity="center"
            android:padding="@dimen/_15sdp"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="@dimen/_11sdp" />


    </LinearLayout>

</LinearLayout>