<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SetRingtoneActivity">

    <LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_700"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">



        <TextView
            android:id="@+id/toolbar_et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/set_as_ringtone"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rlRingtone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/RingtoneImage"
                    android:src="@drawable/ic_update_ringtone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/Ring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/ringtone"
                    android:textColor="#000000"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlSmsAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/RingtoneImage"
                    android:src="@drawable/ic_sms_alert" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alertS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/sms_notification"
                    android:textColor="#000000"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:padding="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/RingtoneImage"
                    android:src="@drawable/ic_update_alarm" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/aler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/alarm_tone"
                    android:textColor="#000000"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>


            <include
                android:id="@+id/adsLayout"
                layout="@layout/adapter_ads_layout" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>